infrastructure/otros/no-usados/argocd/argocd-ingressroute.yaml
# argocd-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`argocd.migbertweb.xyz`)
    kind: Rule
    services:
    - name: argocd-server
      port: 80
    middlewares:
      - name: default-headers # Asegúrate de que el Middleware esté en el namespace correcto
  tls:
    secretName: argocd-tls
